Fixed broken Inter UI fonts

--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -1,6 +1,8 @@
 ---
 ---
 
+$marketing-font-path: "/node_modules/primer-marketing-support/fonts/";
+
 @import "primer-core/index.scss";
 @import "primer-marketing/index.scss";
 @import "toc.scss";
